src/main/bindings/rust/wrapper.rs

#[test]
fn bindgen_test_layout__ShMemBlock() {
    assert_eq!(
        ::std::mem::size_of::<_ShMemBlock>(),
        16usize,
        concat!("Size of: ", stringify!(_ShMemBlock))
    );
    assert_eq!(
        ::std::mem::align_of::<_ShMemBlock>(),
        8usize,
        concat!("Alignment of ", stringify!(_ShMemBlock))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ShMemBlock>())).p as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ShMemBlock),
            "::",
            stringify!(p)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ShMemBlock>())).nbytes as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ShMemBlock),
            "::",
            stringify!(nbytes)
        )
    );
}
pub type ShMemBlock = _ShMemBlock;
extern "C" {
    pub fn thread_ref(thread: *mut Thread);
}
extern "C" {
    pub fn thread_unref(thread: *mut Thread);
}
extern "C" {
    pub fn thread_run(
        thread: *mut Thread,
        argv: *mut *mut ::std::os::raw::c_char,
        envv: *mut *mut ::std::os::raw::c_char,
        workingDir: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn thread_resume(thread: *mut Thread);
}
extern "C" {
    pub fn thread_handleProcessExit(thread: *mut Thread);
}
extern "C" {
    pub fn thread_getReturnCode(thread: *mut Thread) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn thread_nativeSyscall(
        thread: *mut Thread,
        n: ::std::os::raw::c_long,
        ...
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn thread_isRunning(thread: *mut Thread) -> bool;
}
extern "C" {
    pub fn thread_getProcessId(thread: *mut Thread) -> u32;
}
extern "C" {
    pub fn thread_getHostId(thread: *mut Thread) -> u32;
}
extern "C" {
    pub fn thread_getNativePid(thread: *mut Thread) -> pid_t;
}
extern "C" {
    pub fn thread_getNativeTid(thread: *mut Thread) -> pid_t;
}
extern "C" {
    pub fn thread_getID(thread: *mut Thread) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn thread_clone(
        thread: *mut Thread,
        flags: ::std::os::raw::c_ulong,
        child_stack: PluginPtr,
        ptid: PluginPtr,
        ctid: PluginPtr,
        newtls: ::std::os::raw::c_ulong,
        child: *mut *mut Thread,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn thread_setTidAddress(thread: *mut Thread, addr: PluginVirtualPtr);
}
extern "C" {
    pub fn thread_getTidAddress(thread: *mut Thread) -> PluginVirtualPtr;
}
extern "C" {
    pub fn thread_isLeader(thread: *mut Thread) -> bool;
}
extern "C" {
    pub fn thread_getIPCBlock(thread: *mut Thread) -> *mut ShMemBlock;
}
extern "C" {
    pub fn thread_getShMBlock(thread: *mut Thread) -> *mut ShMemBlock;
}
extern "C" {
    pub fn thread_getProcess(thread: *mut Thread) -> *mut Process;
}
extern "C" {
    pub fn thread_getHost(thread: *mut Thread) -> *mut Host;
}
extern "C" {
    pub fn thread_getSysCallHandler(thread: *mut Thread) -> *mut SysCallHandler;
}
extern "C" {
    pub fn process_new(
        host: *mut Host,
        processID: guint,
        startTime: SimulationTime,
        stopTime: SimulationTime,
        interposeMethod: InterposeMethod,
        hostName: *const gchar,
        pluginName: *const gchar,
        pluginPath: *const gchar,
        envv: *mut *mut gchar,
        argv: *mut *mut gchar,
    ) -> *mut Process;
}
extern "C" {
    pub fn process_ref(proc_: *mut Process);
}
extern "C" {
    pub fn process_unref(proc_: *mut Process);
}
extern "C" {
    pub fn process_schedule(proc_: *mut Process, nothing: gpointer);
}
extern "C" {
    pub fn process_continue(proc_: *mut Process, thread: *mut Thread);
}
extern "C" {
    pub fn process_stop(proc_: *mut Process);
}
extern "C" {
    pub fn process_detachPlugin(procptr: gpointer, nothing: gpointer);
}
extern "C" {
    pub fn process_getWorkingDir(proc_: *mut Process) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn process_addThread(proc_: *mut Process, thread: *mut Thread);
}
extern "C" {
    pub fn process_markAsExiting(proc_: *mut Process);
}
extern "C" {
    pub fn process_isRunning(proc_: *mut Process) -> gboolean;
}
extern "C" {
    pub fn process_getName(proc_: *mut Process) -> *const gchar;
}
extern "C" {
    pub fn process_getPluginName(proc_: *mut Process) -> *const gchar;
}
extern "C" {
    pub fn process_getProcessID(proc_: *mut Process) -> guint;
}
extern "C" {
    pub fn process_getNativePid(proc_: *const Process) -> pid_t;
}
extern "C" {
    pub fn process_findNativeTID(
        proc_: *mut Process,
        virtualPID: pid_t,
        virtualTID: pid_t,
    ) -> pid_t;
}
extern "C" {
    pub fn process_registerCompatDescriptor(
        proc_: *mut Process,
        compatDesc: *mut CompatDescriptor,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_deregisterCompatDescriptor(
        proc_: *mut Process,
        handle: ::std::os::raw::c_int,
    ) -> *mut CompatDescriptor;
}
extern "C" {
    pub fn process_getRegisteredCompatDescriptor(
        proc_: *mut Process,
        handle: ::std::os::raw::c_int,
    ) -> *const CompatDescriptor;
}
extern "C" {
    pub fn process_registerLegacyDescriptor(
        proc_: *mut Process,
        desc: *mut LegacyDescriptor,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_deregisterLegacyDescriptor(proc_: *mut Process, desc: *mut LegacyDescriptor);
}
extern "C" {
    pub fn process_getRegisteredLegacyDescriptor(
        proc_: *mut Process,
        handle: ::std::os::raw::c_int,
    ) -> *mut LegacyDescriptor;
}
extern "C" {
    pub fn process_getPhysicalAddress(
        proc_: *mut Process,
        vPtr: PluginVirtualPtr,
    ) -> PluginPhysicalPtr;
}
extern "C" {
    pub fn process_readPtr(
        proc_: *mut Process,
        dst: *mut ::std::os::raw::c_void,
        src: PluginVirtualPtr,
        n: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_getReadableString(
        process: *mut Process,
        plugin_src: PluginPtr,
        n: size_t,
        str_: *mut *const ::std::os::raw::c_char,
        strlen: *mut size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_readString(
        proc_: *mut Process,
        str_: *mut ::std::os::raw::c_char,
        src: PluginVirtualPtr,
        n: size_t,
    ) -> ssize_t;
}
extern "C" {
    pub fn process_writePtr(
        proc_: *mut Process,
        dst: PluginVirtualPtr,
        src: *const ::std::os::raw::c_void,
        n: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_getReadablePtr(
        proc_: *mut Process,
        plugin_src: PluginPtr,
        n: size_t,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn process_getWriteablePtr(
        proc_: *mut Process,
        plugin_src: PluginPtr,
        n: size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn process_getMutablePtr(
        proc_: *mut Process,
        plugin_src: PluginPtr,
        n: size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn process_flushPtrs(proc_: *mut Process);
}
extern "C" {
    pub fn process_freePtrsWithoutFlushing(proc_: *mut Process);
}
extern "C" {
    pub fn process_getMemoryManager(proc_: *mut Process) -> *mut MemoryManager;
}
extern "C" {
    pub fn process_setMemoryManager(proc_: *mut Process, memoryManager: *mut MemoryManager);
}
extern "C" {
    pub fn process_getHostId(proc_: *const Process) -> u32;
}
extern "C" {
    pub fn process_getInterposeMethod(proc_: *mut Process) -> InterposeMethod;
}
extern "C" {
    pub fn process_parseArgStr(
        commandLine: *const ::std::os::raw::c_char,
        argc: *mut ::std::os::raw::c_int,
        argv: *mut *mut *mut ::std::os::raw::c_char,
        error: *mut *mut ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn process_parseArgStrFree(
        argv: *mut *mut ::std::os::raw::c_char,
        error: *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn descriptor_unref(data: gpointer);
}
extern "C" {
    pub fn descriptor_setHandle(descriptor: *mut LegacyDescriptor, handle: gint);
}
extern "C" {
    pub fn descriptor_shutdownHelper(legacyDesc: *mut LegacyDescriptor);
}
pub type Transport = _Transport;
pub type TransportFunctionTable = _TransportFunctionTable;
pub type TransportSendFunc = ::std::option::Option<
    unsafe extern "C" fn(
        transport: *mut Transport,
        thread: *mut Thread,
        buffer: PluginVirtualPtr,
        nBytes: gsize,
        ip: in_addr_t,
        port: in_port_t,
    ) -> gssize,
>;
pub type TransportReceiveFunc = ::std::option::Option<
    unsafe extern "C" fn(
        transport: *mut Transport,
        thread: *mut Thread,
        buffer: PluginVirtualPtr,
        nBytes: gsize,
        ip: *mut in_addr_t,
        port: *mut in_port_t,
    ) -> gssize,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _TransportFunctionTable {
    pub close: DescriptorCloseFunc,
    pub free: DescriptorFreeFunc,
    pub send: TransportSendFunc,
    pub receive: TransportReceiveFunc,
    pub magic: guint,
}
#[test]
fn bindgen_test_layout__TransportFunctionTable() {
    assert_eq!(
        ::std::mem::size_of::<_TransportFunctionTable>(),
        40usize,
        concat!("Size of: ", stringify!(_TransportFunctionTable))
    );
    assert_eq!(
        ::std::mem::align_of::<_TransportFunctionTable>(),
        8usize,
        concat!("Alignment of ", stringify!(_TransportFunctionTable))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_TransportFunctionTable>())).close as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_TransportFunctionTable),
            "::",
            stringify!(close)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_TransportFunctionTable>())).free as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_TransportFunctionTable),
            "::",
            stringify!(free)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_TransportFunctionTable>())).send as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_TransportFunctionTable),
            "::",
            stringify!(send)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_TransportFunctionTable>())).receive as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_TransportFunctionTable),
            "::",
            stringify!(receive)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_TransportFunctionTable>())).magic as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_TransportFunctionTable),
            "::",
            stringify!(magic)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Transport {
    pub super_: LegacyDescriptor,
    pub vtable: *mut TransportFunctionTable,
    pub magic: guint,
}
